--- a/head_foot/footer.html
+++ b/head_foot/footer.html
@@ -1,7 +1,8 @@
 &nbsp;
 <hr />
-<p style="text-align: center;">Please cite as <a href="https://github.com/holtzy/">Yan Holtz</a></p>
-<p style="text-align: center;"><span style="color: #808080;"><em>Yan.holtz.data@gmail.com</em></span></p>
+<p style="text-align: center;">Please cite as:</p>
+<p style="text-align: center;">Anelda van der Walt, & Andy South. (2020, June 1). Exploring open African health facility data (Version v1.1). Zenodo. <a href="http://doi.org/10.5281/zenodo.3871195">http://doi.org/10.5281/zenodo.3871195</a></p>
+<p style="text-align: center;"><span style="color: #808080;"><em><a href="http://afrimapr.org">http://afrimapr.org</a></em></span></p>
 
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
